--- a/src/latest/bin/install
+++ b/src/latest/bin/install
@@ -1,20 +1,24 @@
-#!/bin/sh
+#!/bin/bash
 
 echo "Create Database"
 service mysql start
 mysqladmin -h localhost -P 3306 -u root -proot create www --force 2> /dev/null;
 
 # Download the latest WordPress.
-wp core download --allow-root
+if [ -z $WP_VERSION ]; then
+    wp core download --allow-root
+else
+    wp core download --version=$WP_VERSION --allow-root
+fi
 
 # Config
 wp core config \
     --allow-root \
     --skip-check \
-    --dbhost=127.0.0.1 \
-    --dbname=www \
-    --dbuser=root \
-    --dbpass=root \
+    --dbhost=$DB_HOST \
+    --dbname=$DB_NAME \
+    --dbuser=$DB_USER \
+    --dbpass=$DB_PASSWORD \
     --extra-php <<PHP
 define( 'WP_DEBUG', true );
 define( 'WP_DEBUG_LOG', true );
@@ -24,11 +28,11 @@ PHP
 # Install
 wp core install \
     --allow-root \
-    --url=http://127.0.0.1 \
-    --title=OmiseWooCommerce \
-    --admin_user=admin \
-    --admin_password=admin \
-    --admin_email=iam.nuttanon@gmail.com
+    --url=$WP_BASE_URL \
+    --title=$WP_TITLE \
+    --admin_user=$WP_ADMIN_USER \
+    --admin_password=$WP_ADMIN_PASSWORD \
+    --admin_email=$WP_ADMIN_EMAIL
 
 # Install WooCommerce
 wp plugin install woocommerce --allow-root --activate
